examples/high-quality-code/coupling/coupling-types/bad/object-parameter/a-module.mjs
export function calculateShapeArea(shape) {
  return shape.width * shape.height;
}
